# GumGen

./: .gitignore  CMakeLists.txt
cmake_wasm/: CMakeLists.txt
src/: main.cpp
src/Bezier/: bezier.cpp  bezier.h  declarations.h  polycurve.cpp
src/eigen_bezier/: eigen_bezier.hpp
src/gumgen/: FakeGumGen.cpp  FakeGumGen.h  Polyhedron.cpp  Polyhedron.h  gumgen_support_classes.cpp  gumgen_support_classes.h
src/util/: MathTypeConverter.h  MeshFix.cpp  MeshFix.h
